OAK-11311: Remove usage of Guava ImmutableList.of() (#1923)
* OAK-11311: Remove usage of Guava ImmutableList - oak-upgrade

* OAK-11311: Remove usage of Guava ImmutableList - oak-upgrade

* OAK-11311: Remove usage of Guava ImmutableList - oak-store-spi

* OAK-11311: Remove usage of Guava ImmutableList - oak-store-document - tests

* OAK-11311: Remove usage of Guava ImmutableList - oak-store-document

* OAK-11311: Remove usage of Guava ImmutableList - oak-store-document

* OAK-11311: Remove usage of Guava ImmutableList - oak-authorization-cug

* OAK-11311: Remove usage of Guava ImmutableList - oak-store-composite

* OAK-11311: Remove usage of Guava ImmutableList - oak-solr-cote

* OAK-11311: Remove usage of Guava ImmutableList - oak-segment-tar

* OAK-11311: Remove usage of Guava ImmutableList - oak-segment-azure

* OAK-11311: Remove usage of Guava ImmutableList - oak-security-spi - tests

* OAK-11311: Remove usage of Guava ImmutableList - oak-security-spi

* OAK-11311: Remove usage of Guava ImmutableList - remove unintended change in oak-core

* OAK-11311: Remove usage of Guava ImmutableList - oak-search

* OAK-11311: Remove usage of Guava ImmutableList - oak-run-commons

* OAK-11311: Remove usage of Guava ImmutableList - oak-run-commons

* OAK-11311: Remove usage of Guava ImmutableList - oak-run

* OAK-11311: Remove usage of Guava ImmutableList - oak-query-spi

* OAK-11311: Remove usage of Guava ImmutableList - oak-lucene

* OAK-11311: Remove usage of Guava ImmutableList - oak-search - remove duplicate import

* OAK-11311: Remove usage of Guava ImmutableList - oak-store-document - remove unused imports

* OAK-11311: Remove usage of Guava ImmutableList - oak-security-spi - make a few lists unmodifiable

* OAK-11311: Remove usage of Guava ImmutableList - oak-jcr

* OAK-11311: Remove usage of Guava ImmutableList - oak-it

* OAK-11311: Remove usage of Guava ImmutableList - oak-exercise

* OAK-11311: Remove usage of Gu