@@ -32,7 +32,6 @@ import javax.jcr.PropertyType;
 import javax.jcr.RepositoryException;
 import javax.jcr.Session;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.commons.math3.stat.descriptive.SynchronizedDescriptiveStatistics;
 import org.apache.jackrabbit.api.JackrabbitSession;
 import org.apache.jackrabbit.api.security.user.Authorizable;
@@ -104,7 +103,7 @@ public class ScalabilityNodeRelationshipSuite extends ScalabilityNodeSuite {
     protected static final List<String> NODE_LEVELS = Splitter.on(",").trimResults()
         .omitEmptyStrings().splitToList(System.getProperty("nodeLevels", "10,5,2,1"));
 
-    protected static final List<String> NODE_LEVELS_DEFAULT = ImmutableList.of("10","5","2","1");
+    protected static final List<String> NODE_LEVELS_DEFAULT = List.of("10","5","2","1");
 
     private static final int NUM_USERS =
         (NODE_LEVELS.size() >= 1 ? Integer.parseInt(NODE_LEVELS.get(0)) : Integer.parseInt(NODE_LEVELS_DEFAULT.get(0)));
