@@ -48,7 +48,6 @@ import javax.management.ObjectName;
 import javax.management.StandardMBean;
 import javax.security.auth.login.LoginException;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.guava.common.io.Closer;
 
@@ -1037,20 +1036,20 @@ public class Oak {
         @Deprecated
         public static final OakDefaultComponents INSTANCE = new OakDefaultComponents();
 
-        private final Iterable<CommitHook> commitHooks = ImmutableList.of(new VersionHook());
+        private final Iterable<CommitHook> commitHooks = List.of(new VersionHook());
 
-        private  final Iterable<RepositoryInitializer> repositoryInitializers = ImmutableList
+        private  final Iterable<RepositoryInitializer> repositoryInitializers = List
                 .of(new InitialContent());
 
-        private  final Iterable<EditorProvider> editorProviders = ImmutableList.of(
+        private  final Iterable<EditorProvider> editorProviders = List.of(
                 new ItemSaveValidatorProvider(), new NameValidatorProvider(), new NamespaceEditorProvider(),
                 new TypeEditorProvider(), new ConflictValidatorProvider(), new ChangeCollectorProvider());
 
-        private  final Iterable<IndexEditorProvider> indexEditorProviders = ImmutableList.of(
+        private  final Iterable<IndexEditorProvider> indexEditorProviders = List.of(
                 new ReferenceEditorProvider(), new PropertyIndexEditorProvider(), new NodeCounterEditorProvider(),
                 new OrderedPropertyIndexEditorProvider());
 
-        private  final Iterable<QueryIndexProvider> queryIndexProviders = ImmutableList
+        private  final Iterable<QueryIndexProvider> queryIndexProviders = List
                 .of(new ReferenceIndexProvider(), new PropertyIndexProvider(), new NodeTypeIndexProvider());
 
         private  final SecurityProvider securityProvider = SecurityProviderBuilder.newBuilder().build();
