@@ -30,7 +30,6 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.jetbrains.annotations.NotNull;
 
@@ -113,7 +112,7 @@ public class BreadthFirstTrace implements Trace {
     }
 
     private static void updateContext(@NotNull Consumer<List<String>> context, int depth, int count) {
-        context.accept(ImmutableList.of(valueOf(depth), valueOf(count)));
+        context.accept(List.of(valueOf(depth), valueOf(count)));
     }
 
 }
