@@ -20,7 +20,6 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.jackrabbit.guava.common.collect.ComparisonChain;
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 
 import static java.util.Objects.requireNonNull;
 import static org.apache.jackrabbit.oak.plugins.document.Collection.SETTINGS;
@@ -98,7 +97,7 @@ public final class FormatVersion implements Comparable<FormatVersion> {
      * @return well known format versions.
      */
     public static Iterable<FormatVersion> values() {
-        return ImmutableList.of(V0, V1_0, V1_2, V1_4, V1_6, V1_8);
+        return List.of(V0, V1_0, V1_2, V1_4, V1_6, V1_8);
     }
 
     /**
